new version Inventory and All Equipment

--- a/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
@@ -116,7 +116,7 @@
                                 <i class="lnr-apartment text-primary"></i></div>
                             <div class="widget-numbers font-size-xlg" >
                                 <pre class="text-primary my-4" th:text="''"></pre>
-                                <p class="text-primary my-4" th:text="'Số lượng phòng: ' + ${#lists.size(labsOnLineAndScores)}"></p>
+                                <p class="text-primary my-4" th:text="'Số lượng phòng: ' + ${#lists.size(Labs)}"></p>
                                 <pre class="text-primary my-4" th:text="''"></pre>
                             </div>
                         </div>
