--- a/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
@@ -32,30 +32,42 @@
                     ></textarea>
                 </div>
             </div>
-            <div class="main-card mb-3 card form-group">
-                <div class="card-body">
+            <div class="main-card mb-3 card form-group row flex-row">
+                <div class="card-body col-6">
                     <h4 for="description">Xuất xứ:</h4>
-                    <input rows="1" class="form-control autosize-input" style="height: 35px;font-weight: bold"
+                    <input class="form-control font-weight-bold" style="height: 35px;"
                            id="origin" name="origin" required
                            th:value="*{getOrigin}"
+                           th:placeholder="'Việt Nam'"
                     >
+                </div>
+                <div class="card-body col-6">
+                    <h4 for="unit">Đơn vị tính:</h4>
+                    <select class="form-control font-weight-bold" name="unit" id="unit" required>
+                        <option th:each="unit : ${units}"
+                                th:value="${unit.unitName}" th:text="${unit.unitName}"
+                                th:selected="${unit.unitName == equipment.getUnit}"></option>
+                    </select>
                 </div>
             </div>
             <div class="form-group seriesDiv ">
-                <h4 for="series">Danh sách seri máy và phân cấp loại trang bị <span class="text-danger"> (Chưa được biên chế)</span> :</h4>
+                <h4 for="series">Danh sách seri/mã, phân cấp và ngày cấp trang bị <span class="text-danger"> (Chưa được biên chế về phòng TN)</span> :</h4>
                 <div class="d-flex flex-row flex-wrap justify-content-start row">
                     <th:block th:each="seri, iter : ${equipment.getEquipmentSerieList}">
                         <div class="inputseri d-flex flex-row flex-wrap justify-content-start">
                             <input type="search" class="form-control m-3 col-sm-6" id="series" name="series" required
                                    th:value="${seri}" style="font-weight: bold">
                             <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="Seri2Fix(this)"> <i class="fa fa-wrench"></i> </button>
-                            <select class="form-control m-3 col-sm-6" id="levels" name="levels" required>
-                                <option value="Cấp 1" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 1'}">Cấp 1</option>
-                                <option value="Cấp 2" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 2'}">Cấp 2</option>
-                                <option value="Cấp 3" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 3'}">Cấp 3</option>
-                                <option value="Cấp 4" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 4'}">Cấp 4</option>
-                                <option value="Cấp 5" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 5'}">Cấp 5</option>
-                            </select>
+                            <div class="d-flex flex-row flex-wrap justify-content-start col-sm-6">
+                                <input type="date" id="date" class="form-control m-2 col-sm-6" name="using" th:value="${equipment.getUsingList[iter.index]}">
+                                <select class="form-control m-2 col-sm-4" id="levels" name="levels" required>
+                                    <option value="Cấp 1" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 1'}">Cấp 1</option>
+                                    <option value="Cấp 2" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 2'}">Cấp 2</option>
+                                    <option value="Cấp 3" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 3'}">Cấp 3</option>
+                                    <option value="Cấp 4" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 4'}">Cấp 4</option>
+                                    <option value="Cấp 5" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 5'}">Cấp 5</option>
+                                </select>
+                            </div>
                             <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> <i class="fa fa-times-circle"></i> </button>
                         </div>
                     </th:block>
