--- a/Lab_Management.v1/src/main/resources/templates/admin/equipment-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipment-form.html
@@ -32,29 +32,38 @@
                     ></textarea>
                 </div>
             </div>
-            <div class="main-card mb-3 card form-group">
-                <div class="card-body">
+            <div class="main-card mb-3 card form-group row flex-row">
+                <div class="card-body col-6">
                     <h4 for="description">Xuất xứ:</h4>
-                    <input rows="1" class="form-control autosize-input" style="height: 35px;"
+                    <input class="form-control autosize-input" style="height: 35px;"
                               id="origin" name="origin" required
                               th:placeholder="'Việt Nam'"
                     >
                 </div>
+                <div class="card-body col-6">
+                    <h4 for="unit">Đơn vị tính:</h4>
+                    <select class="form-control font-weight-bold" name="unit" id="unit" required>
+                        <option th:each="unit : ${units}" th:value="${unit.unitName}" th:text="${unit.unitName}" ></option>
+                    </select>
+                </div>
             </div>
             <div class="form-group seriesDiv ">
-                <h4 for="series">Nhập đúng chuỗi seri như mẫu:</h4>
+                <h4 for="series">Nhập seri/mã, ngày cấp và cấp trang bị:</h4>
                 <div class="d-flex flex-row flex-wrap justify-content-start row">
                     <div class="inputseri d-flex flex-row flex-wrap justify-content-start">
                         <input type="search" class="form-control m-3 col-sm-6" id="series" name="series" required
                                th:placeholder="'seri mới'" style="font-weight: bold">
                         <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> <i class="fa fa-times-circle"> </i> </button>
-                        <select class="form-control m-3 col-sm-6" name="levels" required>
-                            <option value="Cấp 1">Cấp 1</option>
-                            <option value="Cấp 2">Cấp 2</option>
-                            <option value="Cấp 3">Cấp 3</option>
-                            <option value="Cấp 4">Cấp 4</option>
-                            <option value="Cấp 5">Cấp 5</option>
-                        </select>
+                        <div class="d-flex flex-row flex-wrap justify-content-start col-sm-6">
+                            <input type="date" id="date" class="form-control m-2 col-sm-6" name="using" >
+                            <select class="form-control m-2 col-sm-4" name="levels"  required>
+                                <option value="Cấp 1">Cấp 1</option>
+                                <option value="Cấp 2">Cấp 2</option>
+                                <option value="Cấp 3">Cấp 3</option>
+                                <option value="Cấp 4">Cấp 4</option>
+                                <option value="Cấp 5">Cấp 5</option>
+                            </select>
+                        </div>
                     </div>
                     <button type="button" class="btn btn-primary m-3" onclick="addInput(this)"> <i class="fa fa-plus-circle"></i> </button>
                 </div>
@@ -64,64 +73,7 @@
                     box-shadow: -2em 0 5px 2px rgba(0, 0, 125, 0.2);
                 }
             </style>
-            <script>
-                function removeSeri(button) {
-                    var inputseriDiv = button.parentNode;
-                    inputseriDiv.remove();
-                }
-                function addInput(button) {
-                    var formGroup = button.parentNode;
-                    var div_inputseri = document.createElement('div');
-                    div_inputseri.classList.add('inputseri');
-                    div_inputseri.setAttribute('class', 'inputseri d-flex flex-row flex-wrap justify-content-start');
-
-                    var input = document.createElement('input');
-                    input.type = 'text';
-                    input.setAttribute('class', 'form-control m-3 col-sm-6');
-                    input.name = 'series';
-                    input.required = true;
-                    input.setAttribute('style', 'font-weight : bold');
-                    input.setAttribute('placeholder', "seri mới");
-
-                    var input = document.createElement('input');
-                    input.type = 'text';
-                    input.setAttribute('class', 'form-control m-3 col-sm-6');
-                    input.name = 'series';
-                    input.required = true;
-                    input.setAttribute('style', 'font-weight : bold');
-                    input.setAttribute('placeholder', "seri mới");
-
-                    var btnremove = document.createElement('button');
-                    btnremove.setAttribute('type', 'button');
-                    btnremove.setAttribute('class', 'btnremove btn btn-primary my-3 col-sm-2');
-                    btnremove.addEventListener('click', function() {
-                        removeSeri(this);
-                    });
-                    var icon_btnremove = document.createElement('i');
-                    icon_btnremove.setAttribute('class', 'fa fa-times-circle');
-                    btnremove.appendChild(icon_btnremove);
-
-                    var select = document.createElement('select');
-                    select.setAttribute('class', 'form-control m-3 col-sm-6');
-                    select.name = 'levels';
-                    select.required = true;
-
-                    var options = ['Cấp 1', 'Cấp 2', 'Cấp 3', 'Cấp 4', 'Cấp 5'];
-                    options.forEach(function(option) {
-                        var opt = document.createElement('option');
-                        opt.value = option;
-                        opt.text = option;
-                        select.add(opt);
-                    });
-
-                    div_inputseri.appendChild(input);
-                    div_inputseri.appendChild(btnremove);
-                    div_inputseri.appendChild(select);
-
-                    formGroup.insertBefore(div_inputseri, button);
-                }
-            </script>
-            <button type="submit" class="btn btn-primary" onclick="return confirm('Bạn có chắc chắn thêm thiết bị này?')">Thêm</button>
+            <button type="submit" class="btn btn-primary" id="submitAddEquid">Thêm</button>
         </form>
     </div>
 
@@ -129,6 +81,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/js/equipment-form.js"></script>
 </equipment-form>
 </body>
 </html>
