--- a/Lab_Management.v1/src/main/resources/templates/admin/labs.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/labs.html
@@ -28,7 +28,6 @@
             </a>
         </div>-->
     </div>
-
     <div class="main-card mb-3 card">
         <div class="card-body">
             <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered">
@@ -49,6 +48,9 @@
                         <td th:text="${lab.getLab_managemet.getName}"></td>
                         <td>
                             <div class="d-flex" style="display: flex; justify-content: center; align-items: center;">
+                                <!--<form th:action="@{'/Lab/admin/room/showinventory/' + ${lab.getId}}" method="get">
+                                    <button type="submit" class="btn btn-primary btn-sm mr-1">Kiểm kê</button>
+                                </form>-->
                                 <form th:action="@{'/Lab/admin/room/showFormForUpdate/' + ${lab.getId}}" method="get">
                                     <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
                                 </form>
