--- a/Lab_Management.v1/src/main/resources/templates/index.html
+++ b/Lab_Management.v1/src/main/resources/templates/index.html
@@ -16,7 +16,9 @@
 <body>
 <div th:replace="headernew::header"></div>
 <main>
-    <div class="container">
+    <div>
+        <!--Không sử dụng container cho không gian rộng hơn-->
+    <!--<div class="container">-->
         <div class="row">
             <div class="col-12">
                 <form action="#" >
@@ -40,7 +42,7 @@
                     </div>
                     <!--<button type="submit" class="btn btn-primary">Đặt lịch</button>-->
                     <div class="choose-room d-flex justify-content-around align-content-center">
-                        <div class="col-3 room" th:each="lab : ${labDTOS}" style="border-radius:1em 1em 65px 65px">
+                        <div class="col-2 room" th:each="lab : ${labDTOS}" style="border-radius:1em 1em 65px 65px">
                             <div class="card lab-card" style="border-radius:50px" >
                                 <div class="header-item">
                                     <div class="card-header justify-content-center" th:text="${lab.getLabName}"></div>
@@ -49,6 +51,9 @@
                                     </div>
                                 </div>
                                 <div class="card-body">
+                                    <div>
+                                        <span class="lab-info " th:text="${lab.managingUnit}"> </span>
+                                    </div>
                                     <div>
                                         <span class="lab-info text-primary"> Người phụ trách: </span>
                                     </div>
@@ -90,6 +95,7 @@
             </div>
         </div>
     </div>
+
 </main>
 <br>
 <br>
