--- a/Lab_Management.v1/src/main/resources/templates/admin/inventory-equipment-readOnly.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/inventory-equipment-readOnly.html
@@ -20,92 +20,21 @@
     <h1 style="text-align: center;text-transform: uppercase;">Phòng: <span class="font-weight-bold text-danger" th:text="${labDTO.getLabName}"></span></h1>
     <h2 style="text-align: center;" class="text-primary text-uppercase" th:text="${labDTO.getManagingUnit}"></h2>
     <br>
-    <!--<div class="container">
-        <form th:object="${equipment}" th:action="@{'/Lab/admin/Equipment/showFormForUpdate/'+ ${equipment.getId}}" method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <h4 for="name">Tên phòng thiết bị:</h4>
-                <input type="text" class="form-control font-weight-bold" id="name" name="name" required
-                       th:value="*{getName}">
-            </div>
-            <div class="main-card mb-3 card form-group">
-                <div class="card-body">
-                    <h4 for="description">Mô tả:</h4>
-                    <textarea rows="1" class="form-control autosize-input font-weight-bold" style="height: 35px"
-                              id="description" name="description" required
-                              th:text="*{getDescription}"
-                    ></textarea>
-                </div>
-            </div>
-            <div class="main-card mb-3 card form-group row flex-row">
-                <div class="card-body col-6">
-                    <h4 for="description">Xuất xứ:</h4>
-                    <input class="form-control font-weight-bold" style="height: 35px;"
-                           id="origin" name="origin" required
-                           th:value="*{getOrigin}"
-                           th:placeholder="'Việt Nam'"
-                    >
-                </div>
-                <div class="card-body col-6">
-                    <h4 for="unit">Đơn vị tính:</h4>
-                    <select class="form-control font-weight-bold" name="unit" id="unit" required>
-                        <option th:each="unit : ${units}"
-                                th:value="${unit.unitName}" th:text="${unit.unitName}"
-                                th:selected="${unit.unitName == equipment.getUnit}"></option>
-                    </select>
-                </div>
-            </div>
-            <div class="form-group seriesDiv ">
-                <h4 for="series">Danh sách seri máy và phân cấp loại trang bị:</h4>
-                <div class="grid-menu-3col">
-                    <th:block th:each="seri, iter : ${equipment.getEquipmentSerieList}">
-                        <div class="inputseri row pt-2">
-                            <div class="form-group col-sm-2">
-                                <input type="search" class="form-control" id="series" name="series" required th:value="${seri}" style="font-weight: bold">
-                            </div>
-                            <div class="form-group col-sm-2">
-                                <select class="form-control font-weight-bold" id="levels" name="levels" required>
-                                    <option value="Cấp 1" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 1'}">Cấp 1</option>
-                                    <option value="Cấp 2" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 2'}">Cấp 2</option>
-                                    <option value="Cấp 3" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 3'}">Cấp 3</option>
-                                    <option value="Cấp 4" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 4'}">Cấp 4</option>
-                                    <option value="Cấp 5" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 5'}">Cấp 5</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-sm-2">
-                                <input type="search" class="form-control" name="usingdate" required
-                                       th:value="${'Biên chế: ' + equipment.getUsingList[iter.index]}" style="font-weight: bold">
-                            </div>
-                            <div class="form-group col-sm-3" th:if="${LabIds[iter.index]}!=0">
-                                <p class="form-control font-weight-bold" >Thuộc phòng:
-                                    <a th:href="'/Lab/admin/room/showFormForUpdate/' + ${LabIds[iter.index]}">
-                                    <span class="text-info" th:text="${LabNames[iter.index]}"></span>
-                                </a></p>
-                            </div>
-                        </div>
-                    </th:block>
-                </div>
-            </div>
-            <div class="form-group seriesDiv" th:if="false">
-                <h4 for="series">Danh sách seri máy đã qua sửa chữa:</h4>
-                <div class="d-flex flex-row flex-wrap justify-content-start row seriesFixedDiv">
-                    <th:block th:each="seri : ${equipment.getEquipmentSerieFixedList}">
-                        <div class="inputseri d-flex flex-row flex-wrap justify-content-start">
-                            <input type="search" class="form-control m-3 col-sm-6" id="seriesfixed" name="seriesfixed" required
-                                   th:value="${seri}" style="font-weight: bold">
-                            <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> <i class="fa fa-times-circle"></i>  </button>
-                        </div>
-                    </th:block>
-                    <button type="button" class="btn btn-primary m-3" onclick="addInputseriesfixed(this)"> <i class="fa fa-plus-circle"></i> </button>
-                </div>
-            </div>
-            <style>
-                .inputseri:hover {
-                    box-shadow: -1.5em 0 5px 2px rgba(0, 0, 125, 0.2);
-                }
-            </style>
-            <button th:if="false" type="submit" class="btn btn-primary" id="submitButton">Sửa</button>
-        </form>
-    </div>-->
+    <form th:action="'/Lab/admin/room/showinventoryForyear/'+${labDTO.getId}" method="get">
+        <div class="row justify-content-center">
+            <select name="inventoryLab" class="form-control m-4 col-2" required>
+                <option th:each="equipInventory : ${equipmentLabDtosInventory}"
+                        th:value="${equipInventory.id}"
+                        th:text="'Danh sách kiểm kê năm '+${equipInventory.year}"
+                        th:selected="${equipInventory.year==year}"></option>
+            </select>
+            <button type="submit" class="form-control btn-primary m-4 col-2">Xem</button>
+        </div>
+    </form>
+
+    <!--<a th:href="'/Lab/admin/getInventory/'+${labDTO.getId}">
+        <button style="text-align: center;" class="form-control btn-success text-primary text-uppercase m-4"> Get </button>
+    </a>-->
     <div class="main-card mb-3 card">
         <div class="card-body">
             <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered">
@@ -117,8 +46,8 @@
                     <th>Seri/Mã</th>
                     <th>Phân cấp</th>
                     <th>Năm sử dụng</th>
-                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${(#dates.year(#dates.createNow())) - 1}"></span></th>
-                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${#dates.year(#dates.createNow())}"></span></th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year - 1}"></span></th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year}"></span></th>
                     <th>Tăng</th>
                     <th>Giảm</th>
                     <th>Lý do</th>
@@ -144,11 +73,32 @@
                             <p th:text="${usingdate}"></p>
                         </th:block>
                     </td>
-                    <td th:text="${#lists.size(equipmentLab.equipmentSerieList)}"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <div th:if="${#lists.size(inventoryCompares)!=0}" >
+                            <span th:text="${inventoryCompares[iter.index].lastYear}"></span>
+                        </div>
+                    </td>
+                    <td>
+                        <div th:if="${#lists.size(inventoryCompares)!=0}" >
+                            <span th:text="${inventoryCompares[iter.index].thisYear}"></span>
+                        </div>
+                        <div th:unless="${#lists.size(inventoryCompares)!=0}" >
+                            <span th:text="${#lists.size(equipmentLab.equipmentSerieList)}"></span>
+                        </div>
+                    </td>
+                    <td>
+                        <div th:if="${#lists.size(inventoryCompares)!=0}" >
+                            <span th:text="${inventoryCompares[iter.index].increase}"></span>
+                        </div>
+                    </td>
+                    <td>
+                        <div th:if="${#lists.size(inventoryCompares)!=0}" >
+                            <span th:text="${inventoryCompares[iter.index].reduce}"></span>
+                        </div>
+                    </td>
+                    <td>
+                        <textarea name="note" class="form-control" cols="10" rows="2" placeholder="Ghí chú lý do"></textarea>
+                    </td>
                 </tr>
                 </tbody>
                 <tfoot>
@@ -159,8 +109,8 @@
                     <th>Seri/Mã</th>
                     <th>Phân cấp</th>
                     <th>Năm sử dụng</th>
-                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${(#dates.year(#dates.createNow())) - 1}"></span></th>
-                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${#dates.year(#dates.createNow())}"></span></th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year - 1}"></span></th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year}"></span></th>
                     <th>Tăng</th>
                     <th>Giảm</th>
                     <th>Lý do</th>
@@ -177,12 +127,12 @@
 
     <script th:src="@{/js/equipment-edit-form.js}"></script>
     <script>
-        var inputElements = document.querySelectorAll('input, textarea, select');
+        /*var inputElements = document.querySelectorAll('input, textarea, select');
         for (var i = 0; i < inputElements.length; i++) {
             if (inputElements[i].type !== 'checkbox') {
                 inputElements[i].disabled = true;
             }
-        }
+        }*/
     </script>
 </inventory-equipment-readOnly>
 </body>
